2018-10-10         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am (profile1): Add minus to ignore errors on final
	step of the recipe.  Allows make to keep going.

2018-09-27         Arnold D. Robbins     <arnold@skeeve.com>

	* Maefile.am (EXTRA_DIST): New test: mpfrbigint2.
	* mpfrbigint2.awk, mpfrbigint2.in, mpfrbigint2.ok: New files.

2018-09-21         Arnold D. Robbins     <arnold@skeeve.com>

	* Maefile.am (EXTRA_DIST): New test: trailbs.
	* trailbs.awk, trailbs.in, trailbs.ok: New files.

2018-09-16         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.in: Regenerated, using Automake 1.16.1.

2018-08-27         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am (fmtspcl): Disable test. It was causing too many
	portability problems.

2018-07-31         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am (EXTRA_DIST): Add assignnumfield files.
	* assignnumfield.awk, assignnumfield.in, assignnumfield.ok: New files.

2018-07-31         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am (EXTRA_DIST): Add arraysort2 files.
	* arraysort2.awk, arraysort2.ok: New files.

2018-07-27         Arnold D. Robbins     <arnold@skeeve.com>

	* back89.ok, funstack.ok, gsubtst5.ok: Update after code changes.
	* lintwarn.ok: Ditto.

2018-07-13         Arnold D. Robbins     <arnold@skeeve.com>

	* fmtspcl.awk, fmtspcl.tok, numrange.ok: Revised after code changes
	in gawk.
	* fix-fmtscl.awk: New file.
	* Makefile.am (fmtspcl.tok): Use fix-fmtscpl.awk instead of
	inline program.

2018-07-12         Arnold D. Robbins     <arnold@skeeve.com>

	* fmtspcl.awk: Improve the formatting, add testing of uppercase
	formats, fix a bug.
	* fmtspcl.tok: Adjust for code changes.

2018-06-22         Andrew J. Schorr     <aschorr@telemetry-investments.com>

	* Makefile.am (EXTRA_DIST): Add files for numrange.
	* numrange.awk, numrange.ok: New files.

2018-05-24         Arnold D. Robbins     <arnold@skeeve.com>

	* noeffect.awk, noeffect.ok: Updated.
