@@ -2215,6 +2215,11 @@ longwrds:
 	@-$(CMP) "$(srcdir)"/$@.ok _$@ && rm -f _$@
 
 
+spacere:
+	@echo $@
+	@LC_ALL=C AWKPATH="$(srcdir)" $(AWK) -f $@.awk  >_$@ 2>&1 || echo EXIT CODE: $$? >>_$@
+	@-$(CMP) "$(srcdir)"/$@.ok _$@ && rm -f _$@
+
 # Targets generated for other tests:
 include Maketests
 
