@@ -1,3 +1,9 @@
+2018-11-24         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* spacere.awk: Move setting of LC_ALL=C out to ...
+	* Makefile.am (spacere): ... here. Added test.
+	Per request from Eli Zaretskii to help porting to MinGW.
+
 2018-10-10         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* Makefile.am (profile1): Add minus to ignore errors on final
